--- a/imagepreview/src/main/res/layout/activity_image_preview_photo.xml
+++ b/imagepreview/src/main/res/layout/activity_image_preview_photo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/img_preview_fl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
@@ -31,9 +32,9 @@
         android:paddingBottom="10dp"
         android:visibility="gone"
         app:selectedColor="@android:color/white"
-        app:selectedRaduis="4dp"
+        app:selectedRadius="4dp"
         app:spacing="6dp"
         app:unSelectedColor="@android:color/darker_gray"
-        app:unSelectedRaduis="4dp" />
+        app:unSelectedRadius="4dp" />
 
 </FrameLayout>
