--- a/imagepreview/src/main/res/layout/activity_image_preview_photo.xml
+++ b/imagepreview/src/main/res/layout/activity_image_preview_photo.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent" />
 
-    <TextView
+    <com.lxb.imagepreview.widget.DotTextView
         android:id="@+id/ltAddDot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
